# The_Awa_Network

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CHECKLIST.md  CLARIFICATION.md  COMMANDS.sh  DEEP_SCAN_ANALYSIS.md  DELIVERY.md  DOCKER_DEPLOYMENT_FLOW.md  INTAKE_SETUP_GUIDE.md  INTEGRATION_SUMMARY.md  IWI_PORTAL_GUIDE.md  LICENSE  ProjectManifest.yaml  QUICK_REFERENCE.md  README.md  README_INTAKE.md  RENDER_DEPLOY.md  STAGES_EXPLAINED.md  STRUCTURE_EXTENSION_SCAN.md  TE_PUNA_MIGRATION_COMPLETE.md  TE_PUNA_SCHEMA_REPORT.md  awa_tree.txt  chat.md  check_tiwhanawhana_integrity.sh  docker-compose.yaml  init.sh  manifest.yaml  nano.47479.save  package-lock.json  pyproject.toml  query_tables.py  render.yaml  run_tiwhanawhana.sh  setup.cfg  start.sh  test_intake.sh  tohu_json
.devcontainer/: Dockerfile  devcontainer.json
.supabase/: currenttables.sql
.supabase/.temp/: pooler-url  project-ref
.supabase/migrations/: 20251104_tiwhanawhana_schema.sql  20251108_add_env_seals.sql
Te_Po/: requirements.txt
Te_Po/core/: main.py
backend/: Dockerfile  __init__.py  config.py  demo_validation.py  main.py  render.yaml  requirements.txt  start_tiwhanawhana.sh
backend/core/: __init__.py  (+3 more)
documents/: wd.md
frontend/: package-lock.json  package.json  tailwind.config.js
scripts/: __init__.py  audit_encoding.py  dev_autostart.sh  export_to_supabase.py  init_env.sh  sanitize_utf8.py  scan_te_puna_schema.py  seed_pgvector.py  startup_cli.py  test_supabase.py  test_supabase_dual.py
supabase/: config.toml
te_po/: config.py  demo_validation.py  main.py
tiwhanawhana/: __init__.py
(+74 files in other folders)
