[project]
name = "tiwhanawhana"
version = "0.1.0"
description = "Tiwhanawhana services, FastAPI backend, and tooling"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "backend*",
    "frontend*",
    "scripts*",
    "tiwhanawhana*",
]
