[metadata]
name = tiwhanawhana
version = 0.1.0
description = Tiwhanawhana services and tooling
long_description = file: README_INTAKE.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
include =
    backend*
    frontend*
    scripts*
    tiwhanawhana*
